Implement User Profile Photo update
